[package]
name = "sorted-collections"
version = "0.0.1"
license = "MIT/Apache-2.0"
description = "A library providing useful extension traits and convenience methods for ordered collections in Rust."
authors = ["Chase Southwood <csouth3@illinois.edu>"]

repository = "https://github.com/csouth3/sorted-collections-rs"
homepage =  "https://github.com/csouth3/sorted-collections-rs"
keywords = ["sorted", "navigable", "collections"]

[profile.dev]
debug = false

[profile.test]
debug = false
