[package]
name = "sorted-collections"
version = "0.0.1"
license = "MIT/Apache-2.0"
description = "A library providing useful extension traits and convenience methods for ordered collections in Rust."
authors = ["Chase Southwood <csouth3@illinois.edu>"]

repository = "https://github.com/csouth3/sorted-collections-rs"
homepage =  "https://github.com/csouth3/sorted-collections-rs"
documentation = "http://csouth3.github.com/sorted-collections-rs/sorted-collections"
keywords = ["sorted", "navigable", "collections"]
readme = "README.md"
