[package]
name = "sorted-collections"
version = "0.0.8"
license = "MIT/Apache-2.0"
description = "A library providing useful extension traits and convenience methods for ordered collections in Rust.  NOTE: This library is not currently in active development, and much of the functionality has been either obsoleted by or superseded by similar or identical functionality of the standard library, or soon will be.  Please use that instead, at least until I find a better direction to take this."
authors = ["Chase Southwood <csouth3@illinois.edu>"]

repository = "https://github.com/csouth3/sorted-collections-rs"
homepage =  "https://github.com/csouth3/sorted-collections-rs"
documentation = "http://csouth3.github.com/sorted-collections-rs/sorted-collections"
keywords = ["sorted", "navigable", "collections"]
readme = "README.md"
